# Ising-Model

./: CMakeLists.txt  Makefile  README.md  interactions.hpp  kernel.cu  kernel.hpp  main  main.cpp
include/: interactions.hpp  kernel.hpp
src/: kernel.cu  main.cpp
